--- a/Css/master.css
+++ b/Css/master.css
@@ -106,7 +106,7 @@ ul li a {
   border-radius: 0;
 }
 
-/* sectionbegin */
+/* <!-- first work page --> */
 
 .space {
   width: 375px;
@@ -237,4 +237,12 @@ button.see-button {
   line-height: 24px;
 
   text-align: center;
+}
+button.see-button:hover {
+  color: #ffffff;
+  background-color: #6070ff;
+}
+button.see-button:active {
+  color: #ffffff;
+  background-color: #2230d2;
 }
