Add work section

--- a/Css/master.css
+++ b/Css/master.css
@@ -121,70 +121,76 @@ section.repeated-section {
   border-radius: 16px;
   padding: 16px;
   display: grid;
-  background-color: #ffffff;
-
+  background-color: #fff;
   grid-template-rows: 200px 70px 35px 92px;
 }
+
 img.repeated-img {
   height: 220px;
   width: 295px;
-
   border-radius: 8px;
   display: inline-block;
 }
+
 p.repeated-p1 {
   height: 36px;
   width: 295px;
-  left: 0px;
-  top: 0px;
-
+  left: 0;
+  top: 0;
+  color: #172b4d;
   font-size: 32px;
   font-weight: 700;
   line-height: 44px;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: left;
 }
+
 ul.repeated-ul {
   list-style: disc;
   height: fit-content;
   width: fit-content;
-  left: 0px;
+  left: 0;
   top: 48px;
-  border-radius: 0px;
+  border-radius: 0;
   font-size: 13px;
   font-weight: 600;
   line-height: 16px;
   align-items: baseline;
   justify-content: space-between;
-
   gap: 32px;
 }
+
 li.repeated-li1 {
   list-style: none;
   color: #344563;
 }
+
 li.repeated-li2 {
   color: #7a869a;
 }
+
 li.repeated-li3 {
   color: #7a869a;
 }
+
 ul.repeated-ul li::marker {
   color: #c1c7d0;
   font-size: 16px;
 }
+
 p.repeated-p2 {
   font-size: 15px;
   font-weight: 400;
   line-height: 24px;
-  letter-spacing: 0em;
+  letter-spacing: 0;
   text-align: left;
   height: 76px;
   width: 295px;
-  left: 0px;
+  left: 0;
   top: 92px;
   border-radius: nullpx;
 }
+
 ul.repeated-ul2 {
   font-size: 12px;
   font-weight: 500;
@@ -192,58 +198,61 @@ ul.repeated-ul2 {
   letter-spacing: 0.03em;
   text-align: left;
 }
+
 li.repeated-li4 {
   color: #6070ff;
   background-color: #ebebff;
   height: 24px;
   width: 57px;
-
   border-radius: 8px;
   padding: 4px 12px 4px 12px;
 }
+
 li.repeated-li5 {
   color: #6070ff;
   background-color: #ebebff;
   height: 24px;
   width: 49px;
   left: 65px;
-  top: 0px;
+  top: 0;
   border-radius: 8px;
   padding: 4px 12px 4px 12px;
 }
+
 li.repeated-li6 {
   color: #6070ff;
   background-color: #ebebff;
   height: 24px;
   width: 92px;
   left: 122px;
-  top: 0px;
+  top: 0;
   border-radius: 8px;
   padding: 4px 12px 4px 12px;
 }
+
 button.see-button {
   color: #396df2;
-  background-color: #ffffff;
+  background-color: #fff;
   border: 1px #6070ff solid;
   height: 48px;
   width: 126px;
-  left: 0px;
+  left: 0;
   top: 12px;
   border-radius: 8px;
   padding: 12px;
-
   font-size: 17px;
   font-weight: 500;
   line-height: 24px;
-
   text-align: center;
 }
+
 button.see-button:hover {
-  color: #ffffff;
+  color: #fff;
   background-color: #6070ff;
 }
+
 button.see-button:active {
-  color: #ffffff;
+  color: #fff;
   background-color: #2230d2;
 }
 
@@ -257,9 +266,137 @@ section.repeated-section-2 {
   border-radius: 16px;
   padding: 16px;
   display: grid;
-  background-color: #ffffff;
+  background-color: #fff;
 }
+
 .space-2 {
   width: 375px;
   height: 44px;
+}
+
+/* about my self */
+section.about-myself {
+  height: 1263px;
+  width: 375px;
+  left: 375px;
+  top: 4769px;
+  background-color: #fff;
+  border-top-right-radius: 75px;
+}
+
+div.div-flex {
+  display: flex;
+  flex-direction: column;
+  padding-top: 114px;
+  padding-left: 24px;
+  padding-right: 24px;
+}
+
+ul.social-1 {
+  margin-left: 11px;
+}
+
+ul.end-part {
+  flex-direction: column;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0;
+  text-align: left;
+}
+
+hr {
+  width: 327px;
+  border-top: 1px solid #dfe1e6;
+}
+
+button.resume {
+  color: #396df2;
+  background-color: #fff;
+  border: 1px #6070ff solid;
+  height: 48px;
+  width: 162px;
+  left: 0;
+  top: 12px;
+  border-radius: 8px;
+  padding: 12px;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: center;
+}
+
+button.resume:hover {
+  color: #fff;
+  background-color: #6070ff;
+}
+
+button.resume:active {
+  color: #fff;
+  background-color: #2230d2;
+}
+
+ul .end-part {
+  display: flex;
+  margin-top: 27px;
+  margin-left: 15px;
+  flex-direction: column;
+}
+
+ul.skil {
+  flex-direction: column;
+}
+
+.skil li {
+  background: #f7f7f9;
+  height: 66.7155990600586px;
+  width: 303px;
+  left: 12px;
+  top: 169.43115234375px;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  padding-left: 12px;
+}
+
+.skil li p {
+  padding-left: 16px;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0;
+  text-align: left;
+}
+
+li.end-part-1::after {
+  display: inline-flex;
+  content: "";
+  width: 6px;
+  height: 6px;
+  border: 2px solid;
+  border-color: #acb7c3 #acb7c3 transparent transparent;
+  margin-left: 144px;
+  transform: rotate(135deg);
+}
+
+li.end-part-2::after {
+  display: inline-flex;
+  content: "";
+  width: 6px;
+  height: 6px;
+  border: 2px solid;
+  border-color: #acb7c3 #acb7c3 transparent transparent;
+  margin-left: 135px;
+  transform: rotate(45deg);
+}
+
+li.end-part-3::after {
+  display: inline-flex;
+  content: "";
+  width: 6px;
+  height: 6px;
+  border: 2px solid;
+  border-color: #acb7c3 #acb7c3 transparent transparent;
+  margin-left: 210px;
+  transform: rotate(45deg);
 }
