--- a/Css/master.css
+++ b/Css/master.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   width: 375px;
 }
 
@@ -370,7 +370,7 @@ ul.skil {
 
 li.end-part-1::after {
   display: inline-flex;
-  content: '';
+  content: "";
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -381,7 +381,7 @@ li.end-part-1::after {
 
 li.end-part-2::after {
   display: inline-flex;
-  content: '';
+  content: "";
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -392,7 +392,7 @@ li.end-part-2::after {
 
 li.end-part-3::after {
   display: inline-flex;
-  content: '';
+  content: "";
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -423,6 +423,8 @@ footer {
   letter-spacing: 0;
   text-align: left;
   text-align: center;
+  margin-bottom: 0px;
+  margin-top: 103px;
 }
 
 .footer-section {
@@ -446,4 +448,8 @@ footer {
 
 .white-text {
   color: #fff;
+}
+.par {
+  max-width: 75%;
+  align-self: center;
 }
