--- a/Css/master.css
+++ b/Css/master.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   width: 375px;
 }
 
@@ -370,7 +370,7 @@ ul.skil {
 
 li.end-part-1::after {
   display: inline-flex;
-  content: "";
+  content: '';
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -381,7 +381,7 @@ li.end-part-1::after {
 
 li.end-part-2::after {
   display: inline-flex;
-  content: "";
+  content: '';
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -392,7 +392,7 @@ li.end-part-2::after {
 
 li.end-part-3::after {
   display: inline-flex;
-  content: "";
+  content: '';
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -452,4 +452,56 @@ footer {
 .par {
   max-width: 75%;
   align-self: center;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.form-submit {
+  align-self: start;
+  width: 35%;
+  margin-left: 13%;
+}
+
+.input-form {
+  width: 75%;
+  border-radius: 12px;
+  border: 1px solid #6070ff;
+  min-height: 48px;
+  padding-left: 12px;
+}
+
+textarea.input-form {
+  padding-top: 15px;
+  height: 170px;
+  resize: none;
+}
+
+button.form-submit {
+  color: #6070ff;
+  background-color: #fff;
+  border: 1px #6070ff solid;
+  height: 48px;
+  width: 126px;
+  left: 0;
+  top: 12px;
+  border-radius: 8px;
+  font-size: 17px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: center;
+}
+
+button.form-submit:hover {
+  color: #fff;
+  background-color: #6070ff;
+}
+
+button.form-submit:active {
+  color: #fff;
+  background-color: #2230d2;
 }
