--- a/Css/master.css
+++ b/Css/master.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   width: 375px;
 }
 
@@ -370,7 +370,7 @@ ul.skil {
 
 li.end-part-1::after {
   display: inline-flex;
-  content: '';
+  content: "";
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -381,7 +381,7 @@ li.end-part-1::after {
 
 li.end-part-2::after {
   display: inline-flex;
-  content: '';
+  content: "";
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -392,7 +392,7 @@ li.end-part-2::after {
 
 li.end-part-3::after {
   display: inline-flex;
-  content: '';
+  content: "";
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -459,6 +459,7 @@ footer {
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  margin-top: 28px;
 }
 
 .form-submit {
