--- a/Css/master.css
+++ b/Css/master.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   width: 100%;
 }
 
@@ -35,6 +35,23 @@ nav {
   align-self: center;
   font-style: normal;
   text-decoration: none;
+  animation-name: slidein;
+  animation-duration: 3s;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+  }
+
+  to {
+    margin-left: 0%;
+  }
+}
+
+.logo:hover {
+  transition: color 1s ease 0s;
+  color: #ffae42;
 }
 
 header nav div {
@@ -373,7 +390,7 @@ ul.skil {
 
 li.end-part-1::after {
   display: inline-flex;
-  content: "";
+  content: '';
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -384,7 +401,7 @@ li.end-part-1::after {
 
 li.end-part-2::after {
   display: inline-flex;
-  content: "";
+  content: '';
   width: 6px;
   height: 6px;
   border: 2px solid;
@@ -395,7 +412,7 @@ li.end-part-2::after {
 
 li.end-part-3::after {
   display: inline-flex;
-  content: "";
+  content: '';
   width: 6px;
   height: 6px;
   border: 2px solid;
