--- a/Css/master.css
+++ b/Css/master.css
@@ -27,8 +27,9 @@ nav {
 }
 
 nav .nav-links .nav-transition {
-  transition: font-size 1s ease 0s,
-  color 1s ease 0s;
+  transition:
+    font-size 1s ease 0s,
+    color 1s ease 0s;
 }
 
 nav .nav-links .nav-transition:hover {
