--- a/Css/master.css
+++ b/Css/master.css
@@ -442,7 +442,7 @@ footer {
 }
 
 .footer-section {
-  height: 100vh;
+  height: 100%;
   width: 100%;
   background-color: #6070ff;
   border-top-left-radius: 80px;
@@ -540,9 +540,54 @@ label {
   color: #fff;
   width: 90%;
 }
+.nav-links-2 {
+  transform: translateY(-100%);
+  display: flex;
+  background-color: #6070ffb8;
+
+  left: 0px;
+  flex-direction: column;
+  position: fixed;
+  width: 100%;
+  top: 0px;
+  height: 100%;
+  backdrop-filter: blur(8px);
+  justify-content: flex-start;
+  padding-top: 30px;
+  padding-left: 28px;
+  gap: 35px;
+  transition: 1s;
+}
+.nav-transition-1,
+.nav-transition-2,
+.nav-transition-3 {
+  height: 24px;
+  width: 251px;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 44px;
+  letter-spacing: 0em;
+}
+.axe {
+  display: flex;
+  width: 12px;
+  height: 10px;
+  color: #fff;
+  align-self: end;
+  padding-right: 30px;
+  font-size: 20px;
+}
+h3 {
+  margin-top: 40px;
+}
 
 /* Desktop version */
 @media (min-width: 768px) {
+  .nav-links-2 {
+    display: none;
+  }
   body {
     width: 100%;
   }
